# ExpatRag

./: .env.example  .gitignore  CLAUDE.md  README.md  business_plan.md  justfile  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/agents/simple_agent/: simple_agent.py
backend/app/agents/supervisor_agent/: supervisor_agent.py
backend/app/api/: auth.py  chats.py  users.py
backend/app/core/: config.py  constants.py  logging.py  prompts.py  supabase_client.py
backend/app/dependencies/: auth.py
backend/app/middleware/: logging_middleware.py
backend/app/schemas/: chat.py  user.py
backend/app/services/: chat_service.py  conversation_service.py  rag_service.py  rag_utils.py
backend/supabase/migrations/: 20260324065254_initial_schema.sql
backend/tests/: test_rag_eval.py
backend/tests/test_set/: golden_dataset.json
data_pipeline/: chunk.py  config.py  discovery.py  fetcher.py  ingest.py  pipeline.py  pyproject.toml  store.py
data_pipeline/data/: news_items.jsonl
data_pipeline/diff_detector/: diff.py  snapshot.py
data_pipeline/lib/: config.py  discovery.py  env.py  jsonl.py  store.py  supabase_client.py
data_pipeline/news/: __init__.py  alerts.py  feed.py  ingest.py  store.py
data_pipeline/scrape/: __init__.py  chunk.py  embeddings.py  extractor.py  fetcher.py  ingest.py  pipeline.py
data_pipeline/tests/: test_diff.py
docs/: product-spec.md  rag_strategies.md
frontend/: CLAUDE.md  README.md  jest.config.ts  package.json  pnpm-lock.yaml
scheduler/: documents.jsonl  (+1 more)
(+128 files in other folders)
