[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "fastapi[standard]",
    "structlog>=24.4.0",
    "supabase>=2.28.3",
    "python-dotenv>=1.2.2",
    "bcrypt>=4.0.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langsmith>=0.3",
]
