[project]
name = "data-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "lxml",
    "unstructured",
    "python-dotenv",
    "supabase",
    "pydantic",
    "langchain-openai>=0.3.12",
    "langchain-text-splitters>=0.3.8",
    "langsmith>=0.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]
